--- a/waybar/oldworld.css
+++ b/waybar/oldworld.css
@@ -1,5 +1,5 @@
 @define-color magenta #ea9a97;
-@define-color purple #907aa9;
+@define-color purple #c4a7e7;
 @define-color red #eb6f92;
 @define-color orange #f5a191;
 @define-color yellow #f6c177;
